# openai-oauth

./: .gitignore  LICENSE  README.md  pyproject.toml
src/openai_oauth/: __init__.py  auth.py  cli.py  tokens.py
