[project]
name = "openai-oauth"
version = "0.1.0"
description = "Authenticate with your ChatGPT Plus/Pro subscription to get OpenAI API keys via OAuth PKCE"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["openai", "oauth", "chatgpt", "pkce", "api-key"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
openai-oauth = "openai_oauth.cli:main"

[project.urls]
Homepage = "https://github.com/coinangel-kr/openai-oauth"
Repository = "https://github.com/coinangel-kr/openai-oauth"
Issues = "https://github.com/coinangel-kr/openai-oauth/issues"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
